name:                log-warper
version:             1.8.10.1
synopsis:            Flexible, configurable, monadic and pretty logging
homepage:            https://github.com/serokell/log-warper
license:             MIT
license-file:        LICENSE
author:              @serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016-2018 Serokell
category:            Logging
extra-source-files:  CHANGES.md
                   , README.md
                   , examples/HowTo.md
                   , examples/HowTo.lhs
                   , examples/PureLogging.md
                   , examples/PureLogging.lhs
stability:           experimental
build-type:          Simple
cabal-version:       >=2.0
description:         This package implements nice and featureful wrapper around hslogger library.
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2

library
  exposed-modules:     System.Wlog
                       System.Wlog.CanLog
                       System.Wlog.Exception
                       System.Wlog.FileUtils
                       System.Wlog.Formatter
                       System.Wlog.HasLoggerName
                       System.Wlog.IOLogger
                       System.Wlog.Launcher
                       System.Wlog.LoggerConfig
                       System.Wlog.LoggerName
                       System.Wlog.LoggerNameBox
                       System.Wlog.LogHandler
                           System.Wlog.LogHandler.Roller
                           System.Wlog.LogHandler.Simple
                       System.Wlog.PureLogging
                       System.Wlog.Severity
                       System.Wlog.Terminal

  other-modules:       System.Wlog.Color
                       System.Wlog.MemoryQueue

  build-depends:       base                 >= 4.9 && < 5
                     , aeson
                     , ansi-terminal        >= 0.7 && < 0.9
                     , containers           ^>= 0.5.7.1
                     , deepseq              ^>= 1.4
                     , directory            ^>= 1.3
                     , filepath             ^>= 1.4.1
                     , fmt
                     , lifted-async
                     , microlens-platform   ^>= 0.3.9
                     , monad-control        ^>= 1.0.1.0
                     , monad-loops          ^>= 0.4.3
                     , mmorph               ^>= 1.1
                     , mtl                  ^>= 2.2.1
                     , o-clock
                     , text                 ^>= 1.2.2.0
                     , time                 ^>= 1.8
                     , transformers         ^>= 0.5.2
                     , transformers-base    ^>= 0.4.4
                     , universum
                     , unordered-containers >= 0.2.7.1
                     , vector               ^>= 0.12
                     , yaml                 ^>= 0.8.20

  if !os(windows)
    build-depends:     unix

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans

  default-extensions:  GeneralizedNewtypeDeriving
                       BangPatterns
                       DeriveDataTypeable
                       DeriveGeneric
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       RecordWildCards
